[package]
name = "tidy"
version = "0.1.0"
edition = "2024"
description = "Tidy is a Rust-based CLI tool to automatically organize your files by type and modified date, with duplicate detection and an optional watch mode for real-time organization."
authors = ["Subhajit Chaudhury <subhajitchaudhury05@gmail.com>"]
license = "MIT"
repository = "https://github.com/subhdotsol/FileOrganizer"
readme = "README.md"
keywords = [
    "Rust CLI tool",
    "file organizer",
    "automatic file sorter",
    "duplicate detection",
    "real-time file watcher",
]
categories = ["command-line-utilities", "multimedia", "network-programming"]

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
notify = "8.2.0"
sha2 = "0.10.9"
